--- a/OPSWebServices/Web.config
+++ b/OPSWebServices/Web.config
@@ -1,8 +1,49 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="LogSettings" type="System.Configuration.AppSettingsSection, System.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
+  </configSections>
+  
+  <LogSettings>
+    <add key="LogPath" value="C:\inetpub\wwwroot\OPSWebServices11"/>
+    <add key="LogFile" value="OPSWebServicesWS.log"/>
+  </LogSettings>
+  
+  <log4net>
+    <appender name="file" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="%property{LogPath}\%property{LogFile}"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="5"/>
+      <maximumFileSize value="10MB"/>
+      <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline"/>
+      </layout>
+    </appender>
+    <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">
+      <param name="ApplicationName" value="OPS WEB SERVICE" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message %newline %exception"  />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="DEBUG"/>
+        <levelMax value="FATAL"/>
+      </filter>
+    </appender>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="file"/>
+      <appender-ref ref="EventLogAppender"/>
+    </root>
+  </log4net>
+  
   <appSettings>
+    <add key="log4net.Internal.Debug" value="true"/>
     <!-- Database ConnectionString -->
-    <add key="ConnectionString" value="Server=RACK02;User Id=opszrgz;Pwd=opszrgz;"/>
+    <add key="ConnectionString" value="Data Source=ORCL;User Id=opsbeasain;Password=opsbeasain;"/>
     <!-- Log directory and file name -->
     <add key="ServiceLog" value="c:\\Inetpub\\OPSWebServicesLog\\{0}_OPSWebServicesWS.log"/>
     <!-- DLL Paths needed for M1 libreries -->
@@ -117,6 +158,14 @@
     <!-- END M50 configuration elements -->
     <!--<<<END: BECS config-->
   </appSettings>
+  <!--
+    Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    Los siguientes atributos se pueden establecer en la etiqueta <httpRuntime>.
+      <system.Web>
+        <httpRuntime targetFramework="4.6" />
+      </system.Web>
+  -->
   <system.web>
     <!--  DYNAMIC DEBUG COMPILATION
           Set compilation debug="true" to enable ASPX debugging.  Otherwise, setting this value to
@@ -127,7 +176,7 @@
           false at all other times. For more information, refer to the documentation about
           debugging ASP.NET files.
     -->
-    <compilation defaultLanguage="c#" debug="true" targetFramework="4.0"/>
+    <compilation defaultLanguage="c#" debug="true" targetFramework="4.6"/>
     <!--  CUSTOM ERROR MESSAGES
           Set customErrors mode="On" or "RemoteOnly" to enable custom error messages, "Off" to disable. 
           Add <error> tags for each of the errors you want to handle.
@@ -152,7 +201,7 @@
            by Microsoft that offers a single logon and core profile services for member sites.
     -->
     <authentication mode="Windows"/>
-    <identity impersonate="true" userName="Enrique Bermejo" password="rocky5gas"/>
+    <identity impersonate="false" userName="Enrique Bermejo" password="rocky5gas"/>
     <!--  AUTHORIZATION 
           This section sets the authorization policies of the application. You can allow or deny access
           to application resources by user or role. Wildcards: "*" mean everyone, "?" means anonymous 
@@ -188,4 +237,15 @@
     <xhtmlConformance mode="Legacy"/>
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
   </system.web>
+
+  <system.diagnostics>
+    <trace autoflush="true">
+      <listeners>
+        <add
+            name="textWriterTraceListener"
+            type="System.Diagnostics.TextWriterTraceListener"
+            initializeData="C:\log4net.txt" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
 </configuration>
