--- a/TestMessagesBB/app.config
+++ b/TestMessagesBB/app.config
@@ -1,10 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="TestMessagesBB.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <section name="TestMessagesBB.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
-</configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="LogSettings" type="System.Configuration.AppSettingsSection, System.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
+  </configSections>
+
+  <LogSettings>
+    <add key="LogPath" value="C:\inetpub\wwwroot\OPSWebServices11"/>
+    <add key="LogFile" value="OPSWebServicesWS.log"/>
+  </LogSettings>
+
+  <log4net>
+    <appender name="file" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="%property{LogPath}\%property{LogFile}"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="5"/>
+      <maximumFileSize value="10MB"/>
+      <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline"/>
+      </layout>
+    </appender>
+    <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">
+      <param name="ApplicationName" value="OPS WEB SERVICE"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message %newline %exception"/>
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="DEBUG"/>
+        <levelMax value="FATAL"/>
+      </filter>
+    </appender>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="file"/>
+      <appender-ref ref="EventLogAppender"/>
+    </root>
+  </log4net>
 <appSettings>
 	<add key="TestMessagesBB.MessagesBB.MessagesBB" value="http://localhost/OPSWebServices11/MessagesBB.asmx"/>
 </appSettings>
@@ -15,4 +51,4 @@
             </setting>
         </TestMessagesBB.Properties.Settings>
     </applicationSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
