lo que faltaba de subir

--- a/OPSWebServices/Web.config
+++ b/OPSWebServices/Web.config
@@ -17,10 +17,18 @@
 	<!-- Contract list -->
     <add key="ContractList" value="0,6,62,72"/>
     <!-- Database ConnectionString -->
-    <add key="ConnectionString" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.42)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsmugipark;Password=opsmugipark;"/>
-	<add key="ConnectionString6" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.42)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsbakio;Password=opsbakio;" />
-	<add key="ConnectionString62" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.42)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsbeasain;Password=opsbeasain;" />
-	<add key="ConnectionString72" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.42)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opszumarraga;Password=opszumarraga;" />
+    <add key="ConnectionString" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsmugipark;Password=opsmugipark;"/>
+	<add key="ConnectionString6" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsbakio;Password=opsbakio;" />
+	<add key="ConnectionString62" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsbeasain;Password=opsbeasain;" />
+	<add key="ConnectionString72" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opszumarraga;Password=opszumarraga;" />
+	<!-- Web service configurations -->
+	<add key="OPSWebServices.Messages" value="http://192.168.2.82/OPSWSMessagesArinpark11/Messages.asmx"/>
+	<add key="OPSWebServices.Messages62" value="http://192.168.2.82/OPSWSMessagesBeasain11/Messages.asmx"/>
+	<add key="OPSWebServices.Messages73" value="http://192.168.2.82/OPSWSMessagesSoria11/Messages.asmx"/>
+	<add key="OPSWebServices.Messages10" value="http://192.168.2.82/OPSWSMessagesHondarribia11/Messages.asmx"/>
+	<add key="OPSWebServices.Messages5" value="http://192.168.2.82/OPSWSMessagesTolosa11/Messages.asmx"/>
+	<add key="OPSWebServices.Messages6" value="http://192.168.2.82/OPSWSMessagesBakio11/Messages.asmx"/>
+	<add key="OPSWebServices.Messages3" value="http://192.168.2.82/OPSWSMessagesZarautz11/Messages.asmx"/>
     <!-- Log directory and file name -->
     <add key="ServiceLog" value="c:\\Inetpub\\OPSWebServicesLog\\{0}_OPSWebServicesWS.log"/>
     <!-- DLL Paths needed for M1 libreries -->
@@ -216,6 +224,16 @@
     <add key="ReportFooterLogo" value="c:\\temp\\MugiparkHeader.jpg"/>
     <add key="EnableHash" value="false"/>
     <add key="RecoveryCodeExpTime" value="2"/>
+	  <!-- Place search configuration -->
+	  <add key="Place.Radius" value="500"/>
+	  <add key="Place.DateRange" value="30"/>
+	  <add key="Place.ApiKey" value="AIzaSyChKp-fHTYs7noKgNZxVVgebSL1AsVZNyo"/>
+	  <add key="cont62.LocalStretchSearchOnly" value="0"/>
+	  <add key="cont73.LocalStretchSearchOnly" value="0"/>
+	  <add key="cont10.LocalStretchSearchOnly" value="0"/>
+	  <add key="cont5.LocalStretchSearchOnly" value="1"/>
+	  <add key="cont6.LocalStretchSearchOnly" value="0"/>
+	  <add key="cont3.LocalStretchSearchOnly" value="0"/>
   </appSettings>
   <Jot>
     <Token timeOut="1440" anonymousAlgorithmInHeader="true"/>
