--- a/OPSWebServices/Web.config
+++ b/OPSWebServices/Web.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!--<section name="oracle.manageddataaccess.client"
-      type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>-->
+    <section name="oracle.manageddataaccess.client"
+      type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
       <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	  <section name="LogSettings" type="System.Configuration.AppSettingsSection, System.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
       <section name="Jot" type="Jot.JotAuthConfigurationSection, Jot" />
@@ -15,29 +15,34 @@
 	
   <appSettings>
 	<!-- Contract list -->
-    <add key="ContractList" value="0,6,62,72"/>
+    <add key="ContractList" value="0,6,62,72,73"/>
     <!-- Database ConnectionString -->
-    <add key="ConnectionString" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsmugipark;Password=opsmugipark;"/>
+    <!--<add key="ConnectionString" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsmugipark;Password=opsmugipark;"/>
 	<add key="ConnectionString6" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsbakio;Password=opsbakio;" />
 	<add key="ConnectionString62" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opsbeasain;Password=opsbeasain;" />
-	<add key="ConnectionString72" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opszumarraga;Password=opszumarraga;" />
+	<add key="ConnectionString72" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.1.45)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE)));User Id=opszumarraga;Password=opszumarraga;" />-->
+  <add key="ConnectionString" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opsmugiparktest;Password=opsmugiparktest;"/>  
+  <add key="ConnectionString73" value="data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=192.168.73.74)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=orcl)));User Id=opssoriatest;Password=opssoriatest;" />    
 	<!-- Web service configurations -->
 	<add key="OPSWebServices.Messages" value="http://192.168.2.82/OPSWSMessagesArinpark11/Messages.asmx"/>
-	<add key="OPSWebServices.Messages62" value="http://192.168.2.82/OPSWSMessagesBeasain11/Messages.asmx"/>
+	<!--<add key="OPSWebServices.Messages62" value="http://192.168.2.82/OPSWSMessagesBeasain11/Messages.asmx"/>
 	<add key="OPSWebServices.Messages73" value="http://192.168.2.82/OPSWSMessagesSoria11/Messages.asmx"/>
 	<add key="OPSWebServices.Messages10" value="http://192.168.2.82/OPSWSMessagesHondarribia11/Messages.asmx"/>
 	<add key="OPSWebServices.Messages5" value="http://192.168.2.82/OPSWSMessagesTolosa11/Messages.asmx"/>
 	<add key="OPSWebServices.Messages6" value="http://192.168.2.82/OPSWSMessagesBakio11/Messages.asmx"/>
-	<add key="OPSWebServices.Messages3" value="http://192.168.2.82/OPSWSMessagesZarautz11/Messages.asmx"/>
+	<add key="OPSWebServices.Messages3" value="http://192.168.2.82/OPSWSMessagesZarautz11/Messages.asmx"/>-->
+    <add key="OPSWebServices.Messages73" value="http://localhost/OPSWebServicesSoria40/Messages.asmx"/>
     <!-- Log directory and file name -->
     <add key="ServiceLog" value="c:\\Inetpub\\OPSWebServicesLog\\{0}_OPSWebServicesWS.log"/>
     <!-- DLL Paths needed for M1 libreries -->
-    <add key="M1DLLPath" value="C:\Projects\ops\02_branches\CC\64_bits\VS 2019\OPSWebServices\OPSCompute.NET\OPSCompute\bin\Debug"/>
+    <!--<add key="M1DLLPath" value="C:\Projects\ops\02_branches\CC\64_bits\VS 2019\OPSWebServices\OPSCompute.NET\OPSCompute\bin\Debug"/>-->
+    <add key="M1DLLPath" value="C:\inetpub\OPSServices\Common\WIN64\opscompute"/>
     <!-- Reg path in HKLM\Software\OTS for M1 Calculation params-->
     <add key="M1RegParamsPath" value="Software\\OTS\\OPSComputeMugipark"/>
-	<add key="M1RegParamsPath6" value="Software\\OTS\\OPSComputeBakio"/>
+	<!--<add key="M1RegParamsPath6" value="Software\\OTS\\OPSComputeBakio"/>
 	<add key="M1RegParamsPath62" value="Software\\OTS\\OPSComputeBeasain"/>
-	<add key="M1RegParamsPath72" value="Software\\OTS\\OPSComputeZumarraga"/>
+	<add key="M1RegParamsPath72" value="Software\\OTS\\OPSComputeZumarraga"/>-->
+    <add key="M1RegParamsPath73" value="SOFTWARE\OTS\OPSComputeSoria"/>
     <!-- Default Article Type-->
     <add key="ArticleType" value="4"/>
     <!-- Mobile/Internet Payment Minimum Balance in cent. Balance must be GREATER than this value to allow ops -->
@@ -53,7 +58,7 @@
     <!-- Connection string to database 
     <add key = "ConnectionString" value = "Server=ORCL;User Id=OPS;Pwd=OPS;" /> -->
     <!-- Database schema owner -->
-    <add key="SchemaOwner" value="OPSLEGAZPI"/>
+    <add key="SchemaOwner" value="OPSMUGIPARKTEST"/>
     <!-- To FECS communications MSMQ queue -->
     <add key="FecsOutputQueuePath" value="FormatName:DIRECT=OS:.\private$\becsfecs"/>
     <!-- From FECS communications MSMQ queue -->
@@ -63,7 +68,7 @@
     <!-- From CC communications MSMQ queue -->
     <add key="CcInputQueuePath" value="FormatName:DIRECT=OS:.\private$\ccbecs"/>
     <!-- "Path" al fichero de configuración de tablas y campos -->
-    <add key="UserSchemaPath" value="C:\inetpub\wwwroot\ops\schemas\ops_tables.xml"/>
+    <add key="UserSchemaPath" value="C:\inetpub\wwwroot\opssoria\schemas\ops_tables.xml"/>
     <!-- OperationsDef que se usan en los mensajes -->
     <add key="OperationsDef.Parking" value="1"/>
     <add key="OperationsDef.Extension" value="2"/>
@@ -224,6 +229,19 @@
     <add key="ReportFooterLogo" value="c:\\temp\\MugiparkHeader.jpg"/>
     <add key="EnableHash" value="false"/>
     <add key="RecoveryCodeExpTime" value="2"/>
+    
+	  <!-- GPS zone configuration Soria -->
+    <add key="cont73.NumZones" value="1" />
+    <add key="cont73.Zone1.Id" value="60001" />
+    <add key="cont73.Zone1.GroupId" value="50001" />
+    <add key="cont73.Zone1.Desc" value="Zona 1 Azul" />
+    <add key="cont73.Zone1.NumAreas" value="1" />
+    <add key="cont73.Zone1.Area1.NumPoints" value="4" />
+    <add key="cont73.Zone1.Area1.P1" value="41,782879:-2,495897" />
+    <add key="cont73.Zone1.Area1.P2" value="41,783015:-2,452382" />
+    <add key="cont73.Zone1.Area1.P3" value="41,751011:-2,451350" />
+    <add key="cont73.Zone1.Area1.P4" value="41,750513:-2,494683" />    
+    
 	  <!-- Place search configuration -->
 	  <add key="Place.Radius" value="500"/>
 	  <add key="Place.DateRange" value="30"/>
@@ -282,7 +300,8 @@
            by Microsoft that offers a single logon and core profile services for member sites.
     -->
     <authentication mode="Windows"/>
-    <identity impersonate="true" userName="clint.burnette" password="section31"/>
+    <!--<identity impersonate="true" userName="clint.burnette" password="section31"/>-->
+    <identity impersonate="true" userName="AlbertoV" password="skype001"/>
     <!--  AUTHORIZATION 
           This section sets the authorization policies of the application. You can allow or deny access
           to application resources by user or role. Wildcards: "*" mean everyone, "?" means anonymous 
@@ -377,7 +396,8 @@
   <oracle.manageddataaccess.client>
     <version number="*">
     <settings>
-        <setting name="tns_admin" value="D:\app\client\clint.burnette\product\12.2.0\client_1\Network\Admin" />
+        <!--<setting name="tns_admin" value="D:\app\client\clint.burnette\product\12.2.0\client_1\Network\Admin" />-->
+      <setting name="tns_admin" value="E:\app\client\Administrador\product\12.2.0\client_odac\Network\Admin" />
     </settings>
     </version>
   </oracle.manageddataaccess.client>
