Inclusión del método RecoverPasswordAPI. Cambio en el web.config para que pueda enviar correos.

--- a/OPSWebServicesAPI/OPSWebServicesAPI.csproj
+++ b/OPSWebServicesAPI/OPSWebServicesAPI.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Models\UserOperation.cs" />
     <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\UserQuery.cs" />
+    <Compile Include="Models\UserRecover.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
