--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -15,6 +15,8 @@
     <add key="LogFile" value="OPSWebServices40Log.txt" />
   </LogSettings>
   <appSettings>
+    <!-- Log directory and file name -->
+    <add key="ServiceLog" value="c:\\Inetpub\\OPSWebServicesLog\\{0}_OPSWebServicesAPI.log"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -94,6 +96,18 @@
     <add key="ArticleType.RotList" value="4" />
     <add key="ArticleType.ResList" value="5,50" />
     <add key="ArticleType.VipList" value="6" />
+
+    <!-- Email configuration -->
+    <add key="SendAddress" value="noreply.arinpark@gerteksa.eus"/>
+    <add key="EmailSubject" value="Informe de operaciones"/>
+    <add key="SMTPServer" value="outlook.office365.com"/>
+    <add key="SMTPPort" value="587"/>
+    <add key="EmailUser" value="noreply.arinpark@gerteksa.eus"/>
+    <add key="EmailPassword" value="Nor1012M"/>
+    <add key="Parameter.AppVersion" value="P_MOBILE_APP_VERSION"/>
+    <add key="MobileOrdersTerminal.Web" value="2"/>
+
+    <add key="RecoveryCodeExpTime" value="2"/>
   </appSettings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
