--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -11,12 +11,12 @@
     <section name="Jot" type="Jot.JotAuthConfigurationSection, Jot" />
   </configSections>
   <LogSettings>
-    <add key="LogPath" value="C:\inetpub\OPSWebServicesLog\" />
+    <add key="LogPath" value="E:\OPSWebservicesAPI\Logs\" />
     <add key="LogFile" value="OPSWebServices40Log.txt" />
   </LogSettings>
   <appSettings>
     <!-- Log directory and file name -->
-    <add key="ServiceLog" value="c:\\Inetpub\\OPSWebServicesLog\\{0}_OPSWebServicesAPI.log"/>
+    <add key="ServiceLog" value="E:\\OPSWebservicesAPI\\Logs\\{0}_OPSWebServicesAPI.log"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -107,6 +107,27 @@
     <add key="Parameter.AppVersion" value="P_MOBILE_APP_VERSION"/>
     <add key="MobileOrdersTerminal.Web" value="2"/>
 
+    <!-- Transaction configuration -->
+    <add key="MerchantTerminal" value="1"/>
+    <add key="MerchantCurrency" value="978"/>
+    <add key="MerchantTranstactionType" value="0"/>
+    <add key="MerchantProductDesc" value="Recarga {0} euros por app móvil Geoslab"/>
+    <add key="MerchantUrl" value="http://188.210.218.86/OPSPrepayWebArinpark/CheckResponse.aspx"/>
+    <add key="MerchantUrlOk" value="http://188.210.218.86/OPSPrepayWebArinpark/ResponseOK.aspx"/>
+    <add key="MerchantUrlKo" value="http://188.210.218.86/OPSPrepayWebArinpark/ResponseKO.aspx"/>
+    <add key="MerchantTest" value="0" />
+    <add key="APP_URL" value="http://188.210.218.86/OPSPrepayWebArinpark/" />
+    <add key="Order.Origin" value="2"/>
+    <add key="SignatureVersion" value="HMAC_SHA256_V1"/>
+    <add key="GlobalizeCommaGPS" value="1"/>
+    <add key="NumDaysOperations" value="300"/>
+    <add key="XML_PARTNER_TAG_NAME" value="apparca"/>
+    <add key="PARTNER_MACTRIPLEDES_KEY" value="1407162214"/>
+    <add key="ServiceOperationStatus.Pending" value="0"/>
+    <add key="ServiceOperationsStatus.Used" value="1"/>
+    <add key="ServiceOperationsStatus.Cancelled" value="2"/>
+    <add key="ReportFooterLogo" value="c:\\temp\\MugiparkHeader.jpg"/>
+    <add key="EnableHash" value="false"/>
     <add key="RecoveryCodeExpTime" value="2"/>
   </appSettings>
   <!--
@@ -176,7 +197,7 @@
     <!-- Define some output appenders -->
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <!-- ** Ruta y Nombre del Archivo **************************************************** -->
-      <file value="c:\Inetpub\OPSWebServicesLog\Logs\OPSWebServices40" />
+      <file value="E:\\OPSWebservicesAPI\\Logs\\OPSWebServicesAPI" />
       <!--Extension del Archivo-->
       <datePattern value="'_'yyyy-MM-dd'.log'" />
       <!-- ********************************************************************************* -->
