--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -129,6 +129,25 @@
     <add key="ReportFooterLogo" value="c:\\temp\\MugiparkHeader.jpg"/>
     <add key="EnableHash" value="false"/>
     <add key="RecoveryCodeExpTime" value="2"/>
+
+    <!-- GPS zone configuration Soria -->
+    <add key="cont73.NumZones" value="1" />
+    <add key="cont73.Zone1.Id" value="60001" />
+    <add key="cont73.Zone1.GroupId" value="50001" />
+    <add key="cont73.Zone1.Desc" value="Zona 1 Azul" />
+    <add key="cont73.Zone1.NumAreas" value="1" />
+    <add key="cont73.Zone1.Area1.NumPoints" value="4" />
+    <add key="cont73.Zone1.Area1.P1" value="41,782879:-2,495897" />
+    <add key="cont73.Zone1.Area1.P2" value="41,783015:-2,452382" />
+    <add key="cont73.Zone1.Area1.P3" value="41,751011:-2,451350" />
+    <add key="cont73.Zone1.Area1.P4" value="41,750513:-2,494683" />
+
+    <!-- Place search configuration -->
+    <add key="Place.Radius" value="500"/>
+    <add key="Place.DateRange" value="30"/>
+    <add key="Place.ApiKey" value="AIzaSyChKp-fHTYs7noKgNZxVVgebSL1AsVZNyo"/>
+    <add key="cont73.LocalStretchSearchOnly" value="0"/>
+     
   </appSettings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
