--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -17,6 +17,17 @@
   <appSettings>
     <!-- Log directory and file name -->
     <add key="ServiceLog" value="E:\\OPSWebservicesAPI\\Logs\\{0}_OPSWebServicesAPI.log"/>
+    
+    <!-- DLL Paths needed for M1 libreries -->
+    <!--<add key="M1DLLPath" value="C:\Projects\ops\02_branches\CC\64_bits\VS 2019\OPSWebServices\OPSCompute.NET\OPSCompute\bin\Debug"/>-->
+    <add key="M1DLLPath" value="C:\inetpub\OPSServices\Common\WIN64\opscompute"/>
+    <!-- Reg path in HKLM\Software\OTS for M1 Calculation params-->
+    <add key="M1RegParamsPath" value="Software\\OTS\\OPSComputeMugipark"/>
+    <!--<add key="M1RegParamsPath6" value="Software\\OTS\\OPSComputeBakio"/>
+	<add key="M1RegParamsPath62" value="Software\\OTS\\OPSComputeBeasain"/>
+	<add key="M1RegParamsPath72" value="Software\\OTS\\OPSComputeZumarraga"/>-->
+    <add key="M1RegParamsPath73" value="SOFTWARE\OTS\OPSComputeSoria"/>    
+    
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -96,6 +107,55 @@
     <add key="ArticleType.RotList" value="4" />
     <add key="ArticleType.ResList" value="5,50" />
     <add key="ArticleType.VipList" value="6" />
+    <!-- Used in M50 too -->
+    <!-- Codigos de las restricciones -->
+    <add key="ConstraintsDef.MaxEstancia" value="1"/>
+    <!-- Used in M50 too -->
+    <add key="ConstraintsDef.MinReentrada" value="2"/>
+    <!-- Used in M50 too -->
+    <add key="ConstraintsDef.TiempoCortesia" value="3"/>
+    <!-- Used in M50 too -->
+    <add key="ConstraintsDef.MaxImport" value="4"/>
+    <!-- Used in M50 too -->
+    <add key="ConstraintsDef.MinImport" value="5"/>
+    <!-- Used in M50 too -->
+    <!-- Codigos de la tabla STATUS -->
+    <add key="Status.OK" value="0"/>
+    <!-- Used in M50 too -->
+    <add key="Status.OUT_OF_SERVICE" value="1"/>
+    <!-- Used in M50 too -->
+    <add key="Status.OUT_OF_SALES" value="2"/>
+    <!-- Used in M50 too -->
+    <!-- END M01 configuration elements (some of them are used in M50 too) -->
+    <!-- BEGIN M04 configuration elements -->
+    <add key="FinesDefCodes.Fine" value="1"/>
+    <add key="FinesDefCodes.Cancellation" value="2"/>
+    <add key="FinesDefCodes.Annulment" value="3"/>
+    <add key="FinesDefCodes.Payment" value="4"/>
+    <add key="FinesDef.Payment" value="99"/>
+    <add key="FineStatusAdmonDef.Pending" value="0"/>
+    <add key="FineCancellation.Payable" value="1"/>
+    <add key="FineCancellation.Expired" value="2"/>
+    <add key="FineCancellation.NotPayable" value="3"/>
+    <add key="FinesDefCode.Fine" value="1"/>
+    <!-- END M04 configuration elements -->
+    <!-- BEGIN M50 configuration elements -->
+    <add key="M50.DIASPARAVEHICULOREINCIDENTE" value="365"/>
+    <add key="M50.MULTASPARAVEHICULOREINCIDENTE" value="20"/>
+    <add key="PayTypesDef.Chipcard" value="1"/>
+    <add key="PayTypesDef.CreditCard" value="2"/>
+    <add key="PayTypesDef.Cash" value="3"/>
+    <add key="PayTypesDef.WebPayment" value="4"/>
+    <add key="PayTypesDef.Telephone" value="5"/>
+    <add key="RechargeType.Bonus" value="1"/>
+    <add key="SpaceStatus.Free" value="0"/>
+    <add key="SpaceStatus.Occupied" value="1"/>
+    <!-- Only the first 24 chars will be used -->
+    <add key="MOBILE_PAYMENT_MACTRIPLEDES_KEY" value="1423423423"/>
+    <add key="XML_TAG_NAME" value="arinpark"/>
+    <add key="TIME_STEPS_OFFSET_IN_MINUTES" value="5"/>
+    <add key="MONEY_STEPS_OFFSET_IN_CENTS" value="5"/>
+    <!-- END M50 configuration elements -->    
 
     <!-- Email configuration -->
     <add key="SendAddress" value="noreply.arinpark@gerteksa.eus"/>
@@ -143,7 +203,7 @@
     <add key="cont73.Zone1.Area1.P4" value="41,750513:-2,494683" />
 
     <!-- Place search configuration -->
-    <add key="Place.Radius" value="500"/>
+    <add key="Place.Radius" value="1000"/>
     <add key="Place.DateRange" value="30"/>
     <add key="Place.ApiKey" value="AIzaSyChKp-fHTYs7noKgNZxVVgebSL1AsVZNyo"/>
     <add key="cont73.LocalStretchSearchOnly" value="0"/>
